add contact email address

--- a/resources/public/partials/buy.html
+++ b/resources/public/partials/buy.html
@@ -183,4 +183,6 @@
       <button ng-disabled="form.$invalid" class="submit-button btn btn-primary" type="submit" ng-cloak>{{submitButtonLabel()}}</button>
     </div>
   </div>
+  <hr/>
+  <p>If you have any questions or problems regarding the ticketing system, please contact us at <a href="mailto:tickets@ehsm.eh" target="_new">tickets@ehsm.eu</a></p>
 </form>
