fix wrong email address

--- a/resources/public/partials/buy.html
+++ b/resources/public/partials/buy.html
@@ -184,5 +184,5 @@
     </div>
   </div>
   <hr/>
-  <p>If you have any questions or problems regarding the ticketing system, please contact us at <a href="mailto:tickets@ehsm.eh" target="_new">tickets@ehsm.eu</a></p>
+  <p>If you have any questions or problems regarding the ticketing system, please contact us at <a href="mailto:tickets@ehsm.eu" target="_new">tickets@ehsm.eu</a></p>
 </form>
