--- a/resources/public/partials/buy.html
+++ b/resources/public/partials/buy.html
@@ -25,12 +25,12 @@
     </div>
     <label>We appreciate your additional donation to support EHSM:</label>
     <div class="controls controls-row">
-      <div class="span3">
+      <div class="span3" bs-tooltip="tooltips.donation" data-placement="right">
         <div class="input-append">
           <span class="add-on">€</span>
           <input class="span1" type="text" size="5"
                  name="donation"
-                 ng-model="ticket.donation" bs-tooltip="tooltips.donation" data-placement="right" ng-change="updateTotal()"/>
+                 ng-model="ticket.donation" data-placement="right" ng-change="updateTotal()"/>
         </div>
       </div>
     </div>
