re-enable cc payments

--- a/resources/public/partials/buy.html
+++ b/resources/public/partials/buy.html
@@ -80,16 +80,14 @@
   </fieldset>        
   <fieldset>
     <legend>Payment</legend>
-    <div>
-    <!-- <div class="controls controls-row">
+    <div class="controls controls-row">
       <div class="btn-group span6" ng-model="fop" ng-change="fopChanged(fop)" bs-buttons-radio>
         <button type="button" class="btn" value="cc">Credit card</button>
-        <button type="button" class="btn" value="elv">ELV</button>
-        <button type="button" class="btn" value="bitpay">Bitcoin</button>
+<!--        <button type="button" class="btn" value="elv">ELV</button>
+        <button type="button" class="btn" value="bitpay">Bitcoin</button> -->
         <button type="button" class="btn" value="wire">Wire</button>
       </div>
-    </div> -->
-    <strong>For now, we can only offer wire transfer for payment.  More options will be added soon!</strong>
+    </div>
     <div id="payment-form">
       <div id="payment-form-cc" ng-show="fop == 'cc'">
         <div class="controls controls-row">
