--- a/resources/public/css/ehsm.css
+++ b/resources/public/css/ehsm.css
@@ -32,3 +32,7 @@ input.ng-invalid-required { background: #FFE4E1; }
     -moz-border-radius: 15px;
     border-radius: 15px;
 }
+
+label {
+    cursor: default;
+}
