--- a/resources/public/partials/buy.html
+++ b/resources/public/partials/buy.html
@@ -6,14 +6,14 @@
         <label class="radio" bs-tooltip="tooltips.studentTicket" data-placement="right">
           <input type="radio" ng-model="ticket.type" value="student" ng-click="updateTotal()">
           Student/unemployed € 45</label>
-        <label class="radio" bs-tooltip="tooltips.earlyTicket" data-placement="right">
-          <input type="radio" ng-model="ticket.type" value="regularEarly"
-                 ng-disabled="!earlyTicketAvailable" ng-click="updateTotal()">
-          Regular (early) € 70</label>
+        <label class="radio" bs-tooltip="tooltips.specialTicket" data-placement="right">
+          <input type="radio" ng-model="ticket.type" value="regularSpecial"
+                 ng-disabled="!specialTicketAvailable" ng-click="updateTotal()">
+          Regular (14/03 special) € 70</label>
         <label class="radio" bs-tooltip="tooltips.lateTicket" data-placement="right">
           <input type="radio" ng-model="ticket.type" value="regularLate"
-                 ng-disabled="earlyTicketAvailable" ng-click="updateTotal()">
-          Regular (late) € 95</label>
+                 ng-disabled="specialTicketAvailable" ng-click="updateTotal()">
+          Regular € 95</label>
         <label class="radio" bs-tooltip="tooltips.supporterTicket" data-placement="right">
           <input type="radio" ng-model="ticket.type" value="supporter"
                  checked ng-click="updateTotal()">
