--- a/resources/public/partials/buy.html
+++ b/resources/public/partials/buy.html
@@ -51,9 +51,9 @@
     <div class="controls controls-row">
       <div class="btn-group span6" ng-model="fop" ng-change="fopChanged(fop)" bs-buttons-radio>
         <button type="button" class="btn" value="cc">Credit card</button>
-<!--        <button type="button" class="btn" value="elv">ELV</button>
-        <button type="button" class="btn" value="bitpay">Bitcoin</button> -->
-        <button type="button" class="btn" value="wire">Wire</button>
+        <button type="button" class="btn" value="elv">ELV</button>
+        <button type="button" class="btn" value="bitpay">Bitcoin</button>
+        <button type="button" class="btn" value="wire">Wire</button> -->
       </div>
     </div>
     <div id="payment-form">
